# vdb

./: .gitignore  Cargo.toml  NOTES.md  README.md
benches/: graph.rs  my_benchmark.rs
dataset/: query.txt
src/: cli.rs  constant.rs  data.rs  dbpedia.rs  debug.rs  error.rs  graph.rs  lib.rs  main.rs  plotter.rs  vanama.rs
src/graph/: disk.rs  graph.rs  mod.rs  plotter.rs  vamana.rs  vector.rs
src/storage/: disk.rs  fresh_disk.rs  inmem.rs  mod.rs  storage.rs
