[package]
name = "vdb"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
plotters = "0.3.7"
polars = { version = "0.26.1", features = ["lazy", "temporal", "describe", "json", "parquet", "dtype-datetime"] }
rand = "0.8.5"
simsimd = "6.3.0"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
